--- a/source-to-fhir-transformation-service/Ballerina.toml
+++ b/source-to-fhir-transformation-service/Ballerina.toml
@@ -1,6 +1,6 @@
 [package]
-org = "wso2"
-name = "event_to_fhir"
+org = "indium"
+name = "source_to_fhir"
 version = "1.0.0"
 distribution = "2201.8.6"
 keywords = ["Healthcare", "FHIR", "Patient", "r4", "health.fhir.r4.uscore501"]
