--- a/source-to-fhir-transformation-service/Dependencies.toml
+++ b/source-to-fhir-transformation-service/Dependencies.toml
@@ -60,6 +60,18 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
+name = "data.jsondata"
+version = "0.2.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "lang.object"}
+]
+modules = [
+	{org = "ballerina", packageName = "data.jsondata", moduleName = "data.jsondata"}
+]
+
+[[package]]
+org = "ballerina"
 name = "http"
 version = "2.10.17"
 dependencies = [
